--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.5.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5",
     "react-scroll": "^1.9.0",
     "react-typed": "^2.0.12"
   },
